--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "postcss": "npx postcss assets/css/style.css > dist/style.css",
-    "prod": "rm -rf dist && webpack --mode production && npx postcss assets/css/style.css > dist/style.css"
+    "prod": "rm -r dist/** && webpack --mode production && npx postcss assets/css/style.css > dist/style.css"
   },
   "keywords": [],
   "author": "",
